       then be sorted by artist, but all titles of each artist remain
       sorted as well (before the tiles were random).
       Arbitrary depth and order of stable sorting is possible by
       clicking the sort columns in the desired order.

       NEW FEATURE: define your own ignore list of words that should
       be ignored during sorting (sort options: ctrl-s).

       IMPROVEMENT: use 'eject' instead of 'umount'. Also fixes the
       bug that 'could not unmount' was always displayed, even if the
       umount was successful (thanks to Andreas Hauber).

       BUGFIX: Some iTunesDB written by iTunes could not be read
       because of an error in the parse code (gtkpod would attempt to
       read beyond the end of the file).

       BUGFIX: Fixed On-The-Go playlist handling (thanks to "Todd").

       UPDATE: Hebrew translation catalog. Thanks to Assaf Gillat!

gtkpod V0.93.1
       BUGFIX: When changing the mountpoint, the change was not
       written to the preferences file correctly.

       BUGFIX: 'Copy from iPod' just failed in offline mode instead of
       giving meaningful error messages -> fixed.

       IMPROVEMENT: 'Copy from iPod' is not 'Export from Database' and
       allows to export from the local database as well. This is
       useful if you want to rename files in a consistant manner.

gtkpod V0.93
	Complete rewrite of reading/writing the iTunesDB. The code for
	reading and writing the iTunesDB (and other iPod/Shuffle
	files) is completely self-contained (itdb*.[ch]) and can
	easily be used in other projects.

	NEW FEATURE: Support of 'local database' containing tracks on
	local harddisk. The contents of the local hard disk can be
	browsed in the known gtkpod-fashion: by artist or genre or
	album etc. Tracks and entire playlists can be dragged over to
	the iPod or Shuffle database. By using smart playlists with
	defined size in MBytes, the Shuffle can be filled effectively.

	Drag and drop also works in the opposite direction: drag