@@ -1,4 +1,4 @@
-/* Time-stamp: <2005-06-20 23:10:25 jcs>
+/* Time-stamp: <2005-07-16 01:38:51 jcs>
 |
 |  Copyright (C) 2002-2005 Jorg Schuler <jcsjcs at users sourceforge net>
 |  Part of the gtkpod project.
@@ -941,7 +941,8 @@ void update_tracks (GList *selected_tracks)
     {
 	Track *track = gl->data;
 	g_return_if_fail (track);
-	gchar *buf = g_strdup_printf (_("Updating %s"), get_track_info (track, TRUE));
+	gchar *buf = g_strdup_printf (_("Updating %s"),
+				      get_track_info (track, TRUE));
 	gtkpod_statusbar_message (buf);
 	g_free (buf);
 	update_track_from_file (track->itdb, track);
