@@ -1,4 +1,4 @@
-/* Time-stamp: <2005-06-17 22:12:15 jcs>
+/* Time-stamp: <2005-07-16 01:51:01 jcs>
 |
 |  Copyright (C) 2002-2005 Jorg Schuler <jcsjcs at users sourceforge net>
 |  Part of the gtkpod project.
@@ -862,42 +862,57 @@ static void ipod_directories_ok (gchar *mp)
     if (!errordir)
     {
 	pbuf = g_build_filename (mp, "Calendars", NULL);
-	if((mkdir(pbuf, 0755) != 0))
-	    errordir = pbuf;
-	else
-	    g_free (pbuf);
+	if (!g_file_test (pbuf, G_FILE_TEST_EXISTS))
+	{
+	    if((mkdir(pbuf, 0755) != 0))
+		errordir = pbuf;
+	    else
+		g_free (pbuf);
+	}
     }
     if (!errordir)
     {
 	pbuf = g_build_filename (mp, "Contacts", NULL);
-	if((mkdir(pbuf, 0755) != 0))
-	    errordir = pbuf;
-	else
-	    g_free (pbuf);
+	if (!g_file_test (pbuf, G_FILE_TEST_EXISTS))
+	{
+	    if((mkdir(pbuf, 0755) != 0))
+		errordir = pbuf;
+	    else
+		g_free (pbuf);
+	}
     }
     if (!errordir)
     {
 	pbuf = g_build_filename (mp, "iPod_Control", NULL);
-	if((mkdir(pbuf, 0755) != 0))
-	    errordir = pbuf;
-	else
-	    g_free (pbuf);
+	if (!g_file_test (pbuf, G_FILE_TEST_EXISTS))
+	{
+	    if((mkdir(pbuf, 0755) != 0))
+		errordir = pbuf;
+	    else
+		g_free (pbuf);
+	}
     }
     if (!errordir)
     {
 	pbuf = g_build_filename (mp, "iPod_Control", "Music", NULL);
-	if((mkdir(pbuf, 0755) != 0))
-	    errordir = pbuf;
-	else
-	    g_free (pbuf);
+	if (!g_file_test (pbuf, G_FILE_TEST_EXISTS))
+	{
+	    if((mkdir(pbuf, 0755) != 0))
+		errordir = pbuf;
+	    else
+		g_free (pbuf);
+	}
     }
     if (!errordir)
     {
 	pbuf = g_build_filename (mp, "iPod_Control", "iTunes", NULL);
-	if((mkdir(pbuf, 0755) != 0))
-	    errordir = pbuf;
-	else
-	    g_free (pbuf);
+	if (!g_file_test (pbuf, G_FILE_TEST_EXISTS))
+	{
+	    if((mkdir(pbuf, 0755) != 0))
+		errordir = pbuf;
+	    else
+		g_free (pbuf);
+	}
     }
     dirnum = ipod_directories_number (mp);
     for(i = 0; i < dirnum; i++)
@@ -907,11 +922,14 @@ static void ipod_directories_ok (gchar *mp)
 	    gchar *num = g_strdup_printf ("F%02d", i);
 	    pbuf = g_build_filename (mp,
 				     "iPod_Control", "Music", num, NULL);
-	    if((mkdir(pbuf, 0755) != 0))
-		errordir = pbuf;
-	    else
-		g_free (pbuf);
-	    g_free (num);
+	    if (!g_file_test (pbuf, G_FILE_TEST_EXISTS))
+	    {
+		if((mkdir(pbuf, 0755) != 0))
+		    errordir = pbuf;
+		else
+		    g_free (pbuf);
+		g_free (num);
+	    }
 	}
     }
 
